--- a/Backend/package.json
+++ b/Backend/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "servidor-node",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "convert-csv-to-json": "^1.3.3",
+    "aws-sdk": "^2.846.0",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
-    "express": "^4.17.2",
-    "ioredis": "^5.0.3",
-    "multer": "^1.4.4",
+    "crypto-browserify": "^3.11.0",
+    "crypto-js": "^4.0.0",
+    "debug": "~2.6.9",
+    "dotenv": "^10.0.0",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "^1.9.1",
+    "multer": "^1.4.3",
     "mysql": "^2.18.1",
-    "redis": "^2.7.1",
-    "request-promise": "^4.2.6",
-    "socket.io": "^2.3.0"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.15"
+    "nodemailer": "^6.7.0",
+    "nodemon": "^2.0.7",
+    "oracledb": "^5.2.0",
+    "pdf-to-base64": "^1.0.3",
+    "react-timeout": "^2.0.1",
+    "xml-js": "^1.6.11"
   }
 }
