--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,18 +13,12 @@
     "crypto-browserify": "^3.11.0",
     "crypto-js": "^4.0.0",
     "debug": "~2.6.9",
-    "dotenv": "^10.0.0",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
-    "nodemailer": "^6.7.0",
-    "nodemon": "^2.0.7",
-    "oracledb": "^5.2.0",
-    "pdf-to-base64": "^1.0.3",
-    "react-timeout": "^2.0.1",
-    "xml-js": "^1.6.11"
+    "react-timeout": "^2.0.1"
   }
 }
