--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
