--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "aws-sdk": "^2.846.0",
     "body-parser": "^1.19.0",
+    "convert-csv-to-json": "^1.3.3",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
     "crypto-browserify": "^3.11.0",
