--- a/Backend/package.json
+++ b/Backend/package.json
@@ -17,6 +17,7 @@
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
+    "moment": "^2.29.3",
     "morgan": "^1.9.1",
     "multer": "^1.4.3",
     "mysql": "^2.18.1",
