--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.23",
+    "moment": "^2.29.3",
     "react": "^16.13.1",
     "react-bootstrap": "^2.2.0",
     "react-dom": "^16.13.1",
